<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/dialog.titlecontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/greenLock">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/reserved_space"
            />
        <TextView
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:drawableTint="@color/colorAccent"
            android:textStyle="italic|bold"
            android:text="@string/locked"/>

        <TextView
            android:id="@+id/dialog.incorrectpasswordTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/redLock"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/incorrect_password"
            android:visibility="gone"/>

    </LinearLayout>

    <EditText
        android:id="@+id/dialog.password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>
</LinearLayout>